<resources>
  <string name="app_name">Lanyard Keychain Order Helper</string>
  <string name="action_settings">Settings</string>
  <string name="title_activity_settings">Settings</string>
  <string name="intent_title_send_order_by_email">Send Order</string>
  <string name="intent_extra_text_body_send_order_by_email">Attached is a lanyard keychain order for %1$s.</string>
  <string name="bundle_key_NewOrderFragment_store_name">bundle_key_NewOrderFragment_store_name</string>
  <string name="bundle_key_NewOrderFragment_order_date">bundle_key_NewOrderFragment_order_date</string>
  <string name="bundle_key_NewOrderFragment_quantity_cell_values">bundle_key_NewOrderFragment_quantity_cell_values</string>
  <string name="bundle_key_order_id">bundle_key_ViewOrderFragment_order_id</string>
  <string name="bundle_key_ViewOrderFragment_store_name">bundle_key_ViewOrderFragment_store_name</string>
  <string name="bundle_key_ViewOrderFragment_order_date">bundle_key_ViewOrderFragment_order_date</string>
  <string name="bundle_key_ViewOrderFragment_order_quantities">bundle_key_ViewOrderFragment_order_quantities</string>
  <string name="bundle_key_ViewOrderFragment_order_total">bundle_key_ViewOrderFragment_order_total</string>
  <string name="action_bar_title_mainActivityFragment">@string/app_name</string>
  <string name="logoImage_SRP_contentDescription">Logo for SRP Companies</string>
  <string name="logoImage_TheNamePeople">Logo of The Name People</string>
  <string name="orderButton_text">Order Keychains</string>
  <string name="viewButton_text">View Previous Orders</string>
  <string name="generateButton_text">DEBUG: Generate</string>
  <string name="crashButton_text">DEBUG: Crash</string>
  <string name="settingsButton_text">Settings</string>
  <string name="action_bar_title_newOrderFragment">New Keychain Order</string>
  <string name="editStoreName_hint">Store Name</string>
  <string name="editStoreName_debug_default_value">Store Name 1</string>
  <string name="editOrderDate_hint">Date</string>
  <string name="buttonReset_text">Reset</string>
  <string name="buttonSend_text">Send Order</string>
  <string name="snackbar_new_order_incomplete_order">Your order isn\'t complete.</string>
  <string name="action_bar_title_orderListFragment">Previous Orders</string>
  <string name="textView_previousOrderFragment_noOrders_text">There are no orders.</string>
  <string name="action_bar_title_orderDetailFragment">Order Details</string>
  <string name="buttonResend_text">Resend Order</string>
  <string name="dialog_title_required_fields">Required Fields</string>
  <string name="dialog_hint_required_fields_name">Name</string>
  <string name="dialog_hint_required_fields_territory">Territory</string>
  <string name="dialog_message_required_fields">In order to fill out order forms entirely, please enter your name, as you would usually on order forms, and your territory (ex: LIT3). If you ever need to change any of these, you can do so by clicking on Settings on the main screen.</string>
  <string name="dialog_positive_button_required_fields">Save</string>
  <string name="dialog_title_send_order">Send Order</string>
  <string name="dialog_message_send_order">Are you sure you\'re ready to send this order?</string>
  <string name="dialog_positive_button_send_order">Send Order</string>
  <string name="dialog_negative_button_send_order">Go Back</string>
  <string name="dialog_title_resend_order">Resend Order</string>
  <string name="dialog_message_resend_order">Are you sure you want to resend this order?</string>
  <string name="dialog_positive_button_resend_order">Resend Order</string>
  <string name="dialog_negative_button_resend_order">Go Back</string>
  <string name="dialog_title_cancel_order">Cancel Order</string>
  <string name="dialog_message_cancel_order">Are you sure you want to cancel your order?</string>
  <string name="dialog_positive_button_cancel_order">Cancel Order</string>
  <string name="dialog_negative_button_cancel_order">Go Back</string>
  <string name="dialog_title_reset_order">Reset Order</string>
  <string name="dialog_message_reset_order">Are you sure you want to reset the current order?</string>
  <string name="dialog_positive_button_reset_order">Reset Order</string>
  <string name="dialog_negative_button_reset_order">Go Back</string>
  <string name="dialog_title_incomplete_order">Incomplete Order</string>
  <string name="dialog_message_incomplete_order">You\'re attempting to send an order that isn\'t finished, please fix the following:\n\n</string>
  <string name="dialog_message_incomplete_order_store_name_empty">- Store name is empty.\n</string>
  <string name="dialog_message_incomplete_order_date_empty">- Order date is empty.\n</string>
  <string name="dialog_message_incomplete_order_keychains_empty">- No keychains were ordered.</string>
  <string name="dialog_negative_button_incomplete_order">Go Back</string>
  <string name="dialog_message_prepare_email_intent">Preparing your order to be sent…</string>
  <string name="toast_dialog_cancel_order_success">Order canceled.</string>
  <string name="toast_dialog_incomplete_order_keychains_empty">You haven\'t chosen any keychains to order.</string>
  <string name="toast_dialog_required_fields_success">Settings saved successfully.</string>
  <string name="toast_dialog_required_fields_fail">Settings not saved, you must enter both your name and territory before starting an order.</string>
  <string name="toast_dialog_required_fields_rep_name_empty">Settings not saved, you must enter your name before starting an order.</string>
  <string name="toast_dialog_required_fields_rep_territory_empty">Settings not saved, you must enter your territory before starting an order.</string>
  <string name="snackbar_message_send_order_success">Order was sent.</string>
  <string name="snackbar_message_send_order_fail">Order preparation failed, order not sent.</string>
  <string name="snackbar_message_send_order_fail_no_supported_apps">There are no email apps configured on this device, order not sent.</string>
  <string name="snackbar_message_coming_soon">Coming soon!</string>
  <string name="pref_header_title_required_fields">Required Fields</string>
  <string name="pref_key_rep_name">pref_key_rep_name</string>
  <string name="pref_title_rep_name">Rep Name</string>
  <string name="pref_description_rep_name">Your name (ex: Chuck Norris), used in order forms.</string>
  <string name="pref_debug_default_value_rep_name">Chuck Norris</string>
  <string name="pref_error_default_value_rep_name">Name Not Set</string>
  <string name="pref_key_rep_territory">pref_key_territory</string>
  <string name="pref_title_rep_territory">Rep Territory</string>
  <string name="pref_description_rep_territory">Your territory (ex: LIT3), used in order forms.</string>
  <string name="pref_debug_default_value_rep_territory">USA1</string>
  <string name="pref_error_default_value_rep_territory">NOT_SET</string>
  <string name="string_format_filename">app_keychain_order-%1$s-%2$s-%3$s.xls</string>
  <string name="string_format_date_layout">%1$d/%2$d/%3$d</string>
  <string name="string_date_layout">MM/dd/yyyy</string>
  <string name="string_format_date_filename">%1$d%2$d%3$d</string>
  <string name="string_date_filename">yyyyMMdd</string>
  <string name="string_format_repName_repTerritory">%1$s/%2$s</string>
  <string name="string_format_email_subject">%1$s - %2$s</string>
  <string name="string_format_stringarray_item">&lt;item>%1$s&lt;/item></string>
  <string name="string_format_list_item_order_total_text">%1$d keychains</string>
  <string name="string_format_list_item_order_total_text_data_binding">%d keychains</string>
  <string name="excel_template_filename">template.xls</string>
</resources>