<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <TextView
    android:id="@+id/textMessage"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:text="@string/dialog_message_required_fields"
    android:textAppearance="@android:style/TextAppearance.Material.Medium"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <EditText
    android:id="@+id/editName"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:ems="10"
    android:hint="@string/dialog_hint_required_fields_name"
    android:inputType="textCapWords"
    android:selectAllOnFocus="true"
    android:singleLine="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textMessage"/>

  <EditText
    android:id="@+id/editTerritory"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:ems="10"
    android:hint="@string/dialog_hint_required_fields_territory"
    android:inputType="textCapCharacters"
    android:selectAllOnFocus="true"
    android:singleLine="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editName"/>

  <Button
    android:id="@+id/saveButton"
    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:text="@string/dialog_positive_button_required_fields"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/editTerritory"/>

</android.support.constraint.ConstraintLayout>